// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`persisted state snapshot > flairs store shape 1`] = `
{
  "test_123_100": {
    "data": {
      "apId": "https://blorpblorp.xyz/flair/100",
      "backgroundColor": null,
      "color": null,
      "id": 100,
      "title": "Test Flair",
    },
    "lastUsed": 1704067200000,
  },
}
`;

exports[`persisted state snapshot > flairs store shape 2`] = `
{
  "flairs": {
    "test_123_100": {
      "data": {
        "apId": "https://blorpblorp.xyz/flair/100",
        "backgroundColor": null,
        "color": null,
        "id": 100,
        "title": "Test Flair",
      },
      "lastUsed": 1704067200000,
    },
  },
}
`;
